--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
     <script src="./node_modules/systemjs/dist/system.src.js"></script>
+    <script src="system.config.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     <title>SystemJS & Traceur project (ES6)</title>
 </head>
+
 <body>
     <script>
-        System.import('js/main.js');
+        System.import('js/main.js').then(function (m) {
+            console.log(m);
+        });
     </script>
 </body>
+
 </html>
